# multi_uav_recon_sim

./: .gitignore  LICENSE  README.md
docs/: README.md
docs/architecture/: MRTA_GORUNTULEME.md  MULTI_DRONE_CONTROL.md
docs/legacy/REVERT_MRTA_BASELINE/: README.md  military_fortress.world.bak  mrta_node.py  worker_drones.yaml
docs/missions/: SATELLITE_SCOUT.md  SCOUT_MISSION.md
docs/overview/: PROJE_ACIKLAMA_CV_LinkedIn.md  PROJE_ANLATIMI.md
docs/sensors/: CAMERA.md
scripts/: run_demo.sh  run_microxrce_agent.sh  run_sim_four_drones.sh  scenario_analysis.py  setup.sh  setup_assets.sh
src/map_object_detector/: README.md  package.xml  setup.cfg  setup.py
src/map_object_detector/map_object_detector/: __init__.py  blue_target_mapper.py
src/multi_scout/: README.md  package.xml  setup.cfg  setup.py
src/multi_scout/config/: coverage_partitions.yaml  fusion_params.yaml
src/multi_scout/launch/: multi_scout.launch.py
src/multi_scout/multi_scout/: __init__.py  detected_targets_recorder_node.py  fused_map_image_node.py  fusion_node.py  zone_boundaries_node.py
src/scout_mission/: README.md  package.xml  setup.cfg  setup.py
src/scout_mission/scout_mission/: __init__.py  satellite_scout_node.py
src/task_allocation/: README.md  package.xml  setup.py
src/task_allocation/config/: mrta.rviz  worker_drones.yaml
src/task_allocation/launch/: mrta.launch.py
src/task_allocation/task_allocation/: __init__.py  mrta_node.py  mrta_panel.py
