<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_scout</name>
  <version>0.1.0</version>
  <description>4 scout drones simultaneous scan: coverage partition, detection fusion, central map</description>
  <maintainer email="user@todo.todo">Tarik</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>tf2_ros</depend>
  <depend>ament_index_python</depend>
  <depend>scout_mission</depend>
  <depend>map_object_detector</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
